# ai-novel-writer

ai-novel-writer-multiagent/: README.md  config.yaml  pyproject.toml  requirements.txt
ai-novel-writer-multiagent/src/ai_novel_writer/: __init__.py  cli.py  orchestrator.py
ai-novel-writer-multiagent/src/ai_novel_writer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai-novel-writer-multiagent/src/ai_novel_writer/agents/: base.py  chapter_writer.py  character_agent.py  continuity_checker.py  dialogue_agent.py  outline_agent.py  reviewer.py
ai-novel-writer-multiagent/src/ai_novel_writer/memory/: memory_store.py
ai-novel-writer-multiagent/src/ai_novel_writer/models/: schemas.py
ai-novel-writer-multiagent/src/ai_novel_writer/prompts/: templates.py
ai-novel-writer-multiagent/src/ai_novel_writer/utils/: io.py  llm.py
ai-novel-writer-multiagent/tests/: conftest.py  test_agents.py  test_orchestrator.py
